# astgen

./: .astgenrc.example  .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  USAGE.md  build.rs  make-release.sh  sample.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  release.yml
src/: cli_types.rs  config.rs  encoding.rs  encodings.rs  error.rs  json.rs  languages.rs  main.rs  output.rs  parser_pool.rs  parsing.rs  versions.rs  walk.rs
tests/: integration_tests.rs
