[package]
name = "astgen"
version = "0.8.0"
edition = "2021"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/grahambrooks/astgen"
homepage = "https://github.com/grahambrooks/astgen"
license = "MIT"

[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25.1"
tree-sitter-language = "0.1.3"
tree-sitter-rust = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-python = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-ruby = "0.23.1"
uuid = { version = "1.11.0", features = ["v4"] }
clap = { version = "4.5.23", features = ["derive"] }

# Performance improvements
rayon = "1.8"
dashmap = "5.5"
num_cpus = "1.16"

# CLI improvements
indicatif = "0.17"
env_logger = "0.11"
log = "0.4"
console = "0.15"

# Configuration
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"

# File handling
ignore = "0.4"

[dev-dependencies]
tempfile = "3.13.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# A GitHub repo to push Homebrew formulas to
tap = "grahambrooks/homebrew-astgen"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
